Fixed z-index issue, and added cursor: pointer;

--- a/src/App-unminified.css
+++ b/src/App-unminified.css
@@ -75,6 +75,7 @@ img.catdera-logo.spin-loader {
 
 .cf-doc-main-row .form-group input[type=checkbox] {
 	border: 1px solid #ddd;
+	cursor: pointer;
 	height: 20px;
 	left: 0;
 	margin: 0;
@@ -82,6 +83,7 @@ img.catdera-logo.spin-loader {
 	position: absolute;
 	top: 3px;
 	width: 20px;
+	z-index: 1;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
